2008-02-23  Adam Roben  <aroben@apple.com>

        Move many dispatch methods to WebFrameLoaderClient

        Reviewed by Sam.

        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::dispatchDidHandleOnloadEvents):
        (WebFrameLoaderClient::dispatchDidReceiveServerRedirectForProvisionalLoad):
        (WebFrameLoaderClient::dispatchDidCancelClientRedirect):
        (WebFrameLoaderClient::dispatchWillPerformClientRedirect):
        (WebFrameLoaderClient::dispatchDidChangeLocationWithinPage):
        (WebFrameLoaderClient::dispatchWillClose):
        (WebFrameLoaderClient::dispatchDidReceiveIcon):
        (WebFrameLoaderClient::dispatchDidStartProvisionalLoad):
        (WebFrameLoaderClient::dispatchDidReceiveTitle):
        (WebFrameLoaderClient::dispatchDidCommitLoad):
        (WebFrameLoaderClient::dispatchDidFinishDocumentLoad):
        (WebFrameLoaderClient::dispatchDidFinishLoad):
        (WebFrameLoaderClient::dispatchDidFirstLayout):
        (WebFrameLoaderClient::dispatchShow):
        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebFrame.cpp:
        * WebFrame.h:

2008-02-23  Adam Roben  <aroben@apple.com>

        Move two more methods to WebFrameLoaderClient

        Reviewed by Sam.

        * WebCoreSupport/WebFrameLoaderClient.cpp:
        (WebFrameLoaderClient::hasFrameView):
        (WebFrame::forceLayout):
        * WebCoreSupport/WebFrameLoaderClient.h:
        * WebFrame.cpp:
        * WebFrame.h:

2008-02-24  Darin Adler  <darin@apple.com>

        Reviewed by Sam.

        - remove separate client calls for "standard" and "reload' history

        * WebFrame.cpp:
        (WebFrame::updateGlobalHistory):
        * WebFrame.h:

2008-02-23  Brent Fulgham  <bfulgham@gmail.com>

        Not reviewed, build fix.

        * WebIconDatabase.cpp:
        * WebIconDatabase.h:

2008-02-22  Adam Roben  <aroben@apple.com>

        Move hasWebView to WebFrameLoaderClient
