@@ -1209,11 +1209,6 @@ void WebFrame::setCopiesOnScroll()
     notImplemented();
 }
 
-void WebFrame::detachedFromParent1()
-{
-    notImplemented();
-}
-
 void WebFrame::detachedFromParent2()
 {
     notImplemented();
