@@ -220,7 +220,6 @@ public:
     virtual void makeRepresentation(WebCore::DocumentLoader*);
     virtual void forceLayoutForNonHTML();
     virtual void setCopiesOnScroll();
-    virtual void detachedFromParent1();
     virtual void detachedFromParent2();
     virtual void detachedFromParent3();
     virtual void detachedFromParent4();
